refactor exception handling, add validation

--- a/web/src/main/resources/messages_ru.properties
+++ b/web/src/main/resources/messages_ru.properties
@@ -1,5 +1,9 @@
-Exception.badParameters=Были переданы не верные параметры
-Exception.createResource=Ошибка создания ресурса
-Exception.deleteResource=Ошибка удаления ресурса
-Exception.resourceNotFound=Ресурс не найден
-Exception.updateResource=Ошибка обновления ресурса
+exception.createResource=Ошибка создания ресурса
+exception.deleteResource=Ошибка удаления ресурса
+exception.resourceNotFound=Ресурс не найден
+exception.updateResource=Ошибка обновления ресурса
+
+validate.name=Длина имени от 1 до 50 символов
+validate.description=Длина описания от 1 до 500 символов
+validate.price=Цена не может быть отрицательной
+validate.duration=Продолжительность не может быть отрицательной
