--- a/web/src/main/resources/messages_en.properties
+++ b/web/src/main/resources/messages_en.properties
@@ -1,5 +1,9 @@
-Exception.badParameters=Wrong parameters were passed
-Exception.createResource=Resource creation error
-Exception.deleteResource=Error deleting resource
-Exception.resourceNotFound=The resource can not be found
-Exception.updateResource=Resource update error
+exception.createResource=Resource creation error
+exception.deleteResource=Error deleting resource
+exception.resourceNotFound=The resource can not be found
+exception.updateResource=Resource update error
+
+validate.name=Name length must be between 1 and 50 chars
+validate.description=Description length must be between 1 and 500 chars
+validate.price=Price can't be negative
+validate.duration=Duration can't be negative
