--- a/web/src/main/resources/messages_ru.properties
+++ b/web/src/main/resources/messages_ru.properties
@@ -2,6 +2,7 @@ exception.createResource=Ошибка создания ресурса
 exception.deleteResource=Ошибка удаления ресурса
 exception.resourceNotFound=Ресурс не найден
 exception.updateResource=Ошибка обновления ресурса
+exception.typeMismatch=Переданно неверное значение
 
 validate.name=Длина имени от 1 до 50 символов
 validate.description=Длина описания от 1 до 500 символов
