--- a/web/src/main/resources/messages_en.properties
+++ b/web/src/main/resources/messages_en.properties
@@ -2,6 +2,7 @@ exception.createResource=Resource creation error
 exception.deleteResource=Error deleting resource
 exception.resourceNotFound=The resource can not be found
 exception.updateResource=Resource update error
+exception.typeMismatch=Invalid value passed
 
 validate.name=Name length must be between 1 and 50 chars
 validate.description=Description length must be between 1 and 500 chars
